--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,6 +7,15 @@
     }
 }
 
+@keyframes scaling {
+    0% {
+        transform: scale(1.0);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+}
+
 
 .cv-wrapper {
     position: relative;
@@ -157,7 +166,7 @@
                 width: 60px;
                 height: 60px;
                 font-size: 1.2em;
-                line-height: 56px;
+                line-height: 59px;
                 color: $color-white;
                 background-color: $color-second;
                 border-radius: 50%;
@@ -191,10 +200,13 @@
                         border-radius: 50%;
                         margin-left: -28px;
                         margin-top: 7px;
+                        animation: scaling 1s infinite alternate;
+                        -webkit-animation: scaling .8s infinite alternate;
                     }
 
                     h4 {
                         font-size: 1em;
+                        line-height: 1.1em;
                         font-weight: normal;
                         padding-top: 0;
 
