add gitbook link

--- a/_includes/cv-template.html
+++ b/_includes/cv-template.html
@@ -15,6 +15,7 @@
         </div>
         <ul class="social">
             <li><a href="{{ site.github }}" target="_blank">{{ site.data[page.lang].common.github }}</a></li>
+            <li><a href="{{ site.gitbook }}" target="_blank">Gitbook (Today What I Learned)</a></li>
             <li><a href="{{ site.linkedIn }}" target="_blank">{{ site.data[page.lang].common.linkedin }}</a></li>
             <li><a href="mailto:{{ site.email }}" target="_blank">{{ site.data[page.lang].common.email }}</a></li>
             {% if page.lang == "ko" %}
