--- a/_includes/pages.html
+++ b/_includes/pages.html
@@ -11,6 +11,10 @@
     {% endif %}
     {% endfor %}
     
+    <li>
+        <a class="page-link" href="{{ site.gitbook }}">Today What I Learned</a>
+    </li>
+    
 
     {% comment %}
         <li class="btn-lang">
