--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-
-    {% include header.html %}
+    {% include component-header.html %}
 
     <div class="page-content">
       <div class="wrapper wrapper-content">
@@ -13,9 +10,7 @@
       </div>
     </div>
 
-    {% include footer.html %}
-    {% include analytics.html %}
-
+    {% include component-footer.html %}
+    {% include util-analytics.html %}
   </body>
-
 </html>
