--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -5,11 +5,12 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "font",
-        "variable",
-        "mixin",
-        "base",
-        "layout",
-        "custom",
-        "syntax-highlighting"
+  "font",
+  "variable",
+  "mixin",
+  "base",
+  "component",
+  "layout",
+  "custom",
+  "syntax-highlighting"
 ;
