--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,5 +14,5 @@ layout: default
 
 </article>
 
-{% include comments.html %}
-{% include analytics.html %}
+{% include util-comments.html %}
+{% include util-analytics.html %}
