--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,223 +4,33 @@
   @include transition(all .2s);
 }
 
+// 텍스트 선택 시 컬러 변경
 @include text-selection-color {
-  //background: #FDFF86;
-  //color: #363636;
-}
-
-.slide-up, .slide-down {
-  @include slide-up
-}
-
-.slide-down {
-  @include slide-down;
+  background: #2A01F9;
+  color: #fff;
 }
 
 /**
  * Site header
  */
-.site-header {
-  min-height: 56px;
 
-  // Positioning context for the mobile navigation icon
-  position: relative;
-  padding-top: 14px;
+ // todo - shadow to mixin
+.header { min-height: 100px; line-height: 100px; box-shadow: 0px 0px 10px rgba(154, 154, 154, 0.25); @include media-query($on-palm) { min-height: 60px; line-height: 60px; } }
+.header-menu {}
+.header-menu-nav { float: left; /*@include media-query($on-palm) { display: none !important; }*/}
+.header-menu-nav-ul { margin: 0; padding: 0; }
+.header-menu-nav-li { float: left; line-height: 100px; margin-right: 30px; @include media-query($on-palm) { line-height: 60px; margin-right: 1rem; }}
+.header-menu-nav-link {}
+.header-info { float: right; }
+.header-info-name {}
 
-  @include media-query($on-palm) {
-    padding-top: 24px;
-  }
 
-  @include media-query-min($on-laptop) {
-    padding-top: 50px;
-    .site-title {
-      &:hover {
-        @include transform(scale(1.3));
-        @include transition(all .3s);
-      }
-    }
-  }
+.index-content {@include clearfix;}
+.index-content-col { float: left; }
+.index-content-col-categories { width: 40%; margin-top: 10px; @include media-query($on-palm) { display: none !important; } }
+.index-content-col-recent { width: 60%;@include media-query($on-palm) { margin-top: 40px; width: 100%;}}
+.index-content-col-title { margin-bottom: 30px; padding: 0; @include media-query($on-palm) { margin-bottom: 10px; }}
 
-  .site-title {
-    display: inline-block;
-    font-size: 0.9em;
-    text-align: center;
-    line-height: 2.65em;
-    color: $color-white !important;
-    width: 40px;
-    height: 40px;
-    background: $color-first;
-    border-radius: 100px;
-
-    @include media-query($on-palm) {
-      width: 44px;
-      height: 44px;
-      font-size: 0.98em;
-    }
-  }
-
-  .site-nav {
-    float: right;
-
-    .menu-icon {
-      display: none;
-    }
-
-    .trigger {
-      .trigger-pages-wrapper {}
-      .trigger-categories-wrapper {
-        display: none;
-      }
-    }
-
-    ul {
-      @include clearfix;
-      li {
-        display: inline-block;
-        @include media-query-min($on-palm) {
-          &:not(:last-child) {
-            margin-right: 30px;
-          }
-        }
-      }
-    }
-
-    .btn-lang > a {
-      color: $color-white;
-      background-color: $color-second;
-      font-size: 1.125em;
-      padding: 4px 10px;
-      border: 0;
-
-      &:hover {
-        background-color: $color-first;
-      }
-    }
-
-    .page-link {
-      font-weight: 700;
-      color: $color-second;
-      font-size: 1.2em;
-      line-height: $base-line-height;
-
-      @include media-query($on-palm) {
-        text-align: center;
-        font-size: 1.3em;
-        color: $color-white;
-      }      
-
-      @include media-query-min($on-laptop) {
-        &:hover {
-          display: inline-block;
-          color: $color-first;
-          text-decoration: none;
-          position: relative;
-
-          &:after {
-            content: '';
-            position: absolute;
-            width: 20px;
-            border-bottom: 6px solid $color-first;
-            bottom: -16px;
-            left: 0;
-            right: 0;
-            margin-left: auto;
-            margin-right: auto;
-          }
-        }
-      }
-    }
-
-    @include media-query($on-palm) {
-      text-align: right;
-
-      .trigger {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgba(0,0,0,.85);
-        z-index: 9999;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-
-        .trigger-sub-wrapper {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          @include transform(translate(-50%, -50%));
-          padding-bottom: 80px;
-          margin-top: -20px;
-          .trigger-pages-wrapper {
-          }
-          .trigger-categories-wrapper {
-            display: block;
-            position: relative;
-            margin-top: 20px;
-            
-            &:before {
-              content: '';
-              position: absolute;
-              width: 30px;
-              border-top: 4px solid $color-first;
-              top: 0;
-              left: 0;
-              right: 0;
-              margin-left: auto;
-              margin-right: auto;
-              margin-top: -24px;
-            }
-          }
-          .btn-close-wrapper {
-            text-align: center;
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-            .btn-close {
-              width: 40px;
-              height: 40px;
-              margin-left: auto;
-              margin-right: auto;
-            }
-          }
-        }
-        ul {
-          margin-left: 0;
-          margin-bottom: 0;
-          li {
-            width: 100%;
-            a.sidebar-nav-item {
-              text-align: center;
-              color: $color-white !important;
-              display: block;
-              padding: 5px 10px;
-              margin-left: 0;
-              font-weight: 700;
-              font-size: 1.2em !important;
-              line-height: 1.8em !important;
-            }
-          }
-        }
-      }
-
-      .menu-icon {
-        display: inline-block;
-        width: 40px;
-        height: 40px;
-      }
-
-      .page-link {
-        display: block;
-        padding: 5px 10px;
-
-        &:not(:last-child) {
-          margin-right: 0;
-        }
-      }
-    }
-  }
-}
 
 /**
  * Site footer
@@ -255,9 +65,25 @@
 
   .footer-list-wrapper {
     position: relative;
-    //background: $color-second;
     background-image: linear-gradient(0deg, #8D1B83 0%, #2900FF 100%);
     @include shadow(0 24px 65px -20px rgba(0, 0, 0, .55));
+
+    ul {
+      list-style: none;
+      margin-left: 0;
+      margin-bottom: 0;
+      line-height: 1.5em;
+      padding-left: 20px;
+      padding-top: 20px;
+
+      li {
+        a {
+          color: $color-white;
+          font-size: 1.2em;
+          line-height: 1.8em;
+        }
+      }
+    }
 
     @include media-query($on-palm) {
       width: 100%;
@@ -265,26 +91,9 @@
       ul {
         li {
           a {
-
+            font-size: 1.4em;
+            line-height: 1.8em;
           }
-        }
-      }
-    }
-
-    ul {
-      list-style: none;
-      margin-left: 0;
-      margin-bottom: 0;
-      line-height: 1.7em;
-      padding-left: 20px;
-      padding-top: 20px;
-
-      li {
-
-        a {
-          color: $color-white;
-          font-size: 1.4em;
-          line-height: 2em;
         }
       }
     }
@@ -317,10 +126,9 @@
           a {
             display: inline-block;
             border-bottom: 4px solid transparent;
+            font-weight: bold;
             &:hover {
               color: #FCF900;
-              border-bottom: 4px solid #FCF900;
-              //@include transform(translateX(10px));
             }
           }
         }
@@ -331,7 +139,6 @@
           border-bottom: 4px solid transparent;
           &:hover {
             color: #FCF900;
-            border-bottom: 4px solid #FCF900;
           }
         }
       }
@@ -345,7 +152,7 @@
     @include clearfix;
 
     .footer-col {
-      float: left;
+      float: right;
     }
 
     .footer-col-1 {
@@ -384,213 +191,13 @@
   }
 }
 
-.page-heading {
-  font-size: 20px;
-}
-
-.page-category {
-  margin-bottom: 40px;
-  padding-bottom: 16px;
-  border-bottom: 1px solid $grey-color-light;
-
-  .cateroty-item {
-    margin-right: 12px;
-    display: inline-block;
-    height: 32px;
-  }
-}
-
-.post-list {
-  margin-left: 0;
-  list-style: none;
-
-  > li {
-    margin-bottom: 30px;
-  }
-
-  @include media-query($on-palm) {
-    > li {
-      margin-bottom: 28px;
-    }
-  }
-
-  .post-custom-wrapper {
-    position: relative;
-    width: 60%;
-    height: 180px;
-    background-color: $color-white;
-    margin-left: auto;
-    margin-right: auto;
-    right: 0;
-
-    .page-list-image {
-      // @180211 - 좌측 사각형 박스 삭제
-      display: none;
-
-
-      position: absolute;
-      width: 180px;
-      height: 100%;
-      overflow: hidden;
-      img {
-        height: 100%;
-        width: auto;
-        max-width: none;
-        position: absolute;
-        left: 50%;
-        @include transform(translateX(-50%))
-      }
-      &.yes-image {
-        &:after {
-          content: '';
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          background-image: linear-gradient(0deg, rgba(232, 51, 173, 0.50) 0%, rgba(99, 160, 234, 0.60) 100%);
-        }
-      }
-      &.no-image {
-        background-image: linear-gradient(0deg, #E833AD 0%, #63A0EA 100%);
-      }
-    }
-
-    .page-list-content {
-      position: absolute;
-      padding-left: 18px;
-      top: 50%;
-
-      // @180211 - 좌측 사각형 박스 적용
-      // left: 180px;
-      // width: calc(100% - 180px);
-      
-      // @180211 - 좌측 사각형 박스 삭제
-      width: calc(100% - 90px);
-      left: 20px;
-      
-      @include transform(translateY(-50%));
-
-      h3 {
-        display: inline-block;
-        
-        // @180211 - 좌측 사각형 박스 삭제
-        // width: 90%;
-        width: 100%;
-
-        margin-bottom: 0;
-        padding-top: 0;
-
-        .post-link {
-          color: #000;
-          font-weight: 500;
-          font-size: 24px;
-          width: 100%;
-          height: 32px;
-          display: inline-block;
-          text-overflow: ellipsis; /* 글자 넘는 경우 ...으로 표시 */
-          white-space: nowrap; /* 줄바꿈 방지. 한줄로 나옴 */
-          overflow: hidden; /* 이게 필요함 */
-
-          @include media-query-min($on-laptop) {
-            &:hover {
-              color: $color-first;
-            }
-          }
-        }
-      }
-
-      .post-meta {
-        font-size: $small-font-size;
-        color: #aaa;
-        display: block;
-      }
-
-      .page-list-category {
-        font-size: $small-font-size;
-        color: #ccc;
-        border: 1px solid #ccc;
-        border-radius: 100px;
-        padding: 0 10px;
-        margin-top: 12px;
-        margin-left: -4px;
-        display: inline-block;
-
-        @include media-query-min($on-laptop) {
-          &:hover {
-            color: $color-second;
-            border: 1px solid $color-second;
-          }
-        }
-      }
-    }
-
-    .page-list-shadow {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
-      z-index: -1;
-      @include shadow(0 10px 60px -18px rgba(0, 0, 0, 0.35));
-      // @include shadow(0 24px 65px -20px rgba(0, 0, 0, .35));
-    }
-  }
-
-  @include media-query($on-palm) {
-    > li {
-    }
-
-    .post-custom-wrapper {
-      width: 100%;
-      height: 150px;
-
-      // @180211 - 좌측 사각형 박스 삭제
-      // height: 340px;
-
-      .page-list-image {
-        width: 100%;
-        height: 56%;
-        img {
-        }
-        &.no-image {
-        }
-      }
-
-      .page-list-content {
-        width: 94%;
-        height: 44%;
-        left: 0;
-        padding-left: 6%;
-
-        // @180211 - 좌측 사각형 박스 삭제
-        // top: 56%;
-        top: 0;
-
-        @include transform(translateY(0));
-        h3 {
-          margin-top: 22px;
-          .post-link {
-            width: 92%;
-          }
-        }
-        .post-meta {
-        }
-        .page-list-category {
-        }
-      }
-    }
-  }
-}
 
 /**
  * Posts
  */
 .post-header {
   margin-bottom: 30px;
-  
+
   @include media-query($on-palm) {
     margin-bottom: 35px;
   }
@@ -605,12 +212,6 @@
     font-size: 32px;
     line-height: 1.4em;
     word-break: keep-all;
-  }
-}
-
-.post {
-  @include media-query($on-palm) {
-    
   }
 }
 
@@ -675,188 +276,4 @@
   @include media-query($on-palm) {
     display: none;
   }
-}
-
-.main-post-wrapper {
-  margin-top: 60px;
-
-  .pagination {
-    margin-top: 90px;
-    margin-bottom: 20px;
-  }
-
-  @include media-query($on-palm) {
-    margin-top: 16px;
-    padding-left: 14px;
-    padding-right: 14px;
-
-    .pagination {
-      margin-top: 30px;
-    }
-  }
-}
-
-.category-page-wrapper {
-  text-align: center;
-  margin-bottom: 50px;
-
-  h3 {
-    font-size: 2em;
-    color: $color-first;
-    font-weight: 500;
-    display: inline-block;
-    position: relative;
-
-    &:after {
-      content: '';
-      position: absolute;
-      width: 30px;
-      border-bottom: 8px solid $color-first;
-      bottom: -20px;
-      left: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-}
-
-.categories-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  width: 498px;
-  @include media-query-min($on-laptop) {
-    margin-top: -20px;
-  }
-
-  @include clearfix;
-
-  ul {
-    text-align: center;
-    margin: 0;
-
-    li {
-      list-style: none;
-      text-align: center;
-      background-image: linear-gradient(0deg, #F63F77 0%, #FAD91A 100%);
-      position: relative;
-      margin-bottom: 24px;
-      float: left;
-      width: 150px;
-      height: 150px;
-
-      margin-right: 24px;
-      &:nth-child(3n + 3) {
-        margin-right: 0;
-      }
-
-      @include media-query-min($on-laptop) {
-        &:hover {
-          @include transform(translateY(-10px));
-          @include transition(all .3s);
-        }
-      }
-
-      a {
-        font-size: 1.3em;
-        font-weight: 500;
-        color: $color-white;
-        display: table-cell;
-        width: inherit;
-        height: inherit;
-        vertical-align: middle;
-      }
-    }
-  }
-
-  @include media-query($on-palm) {
-    display: none;
-  }
-}
-
-.pagination {
-  text-align: center;
-
-  .btn-base {
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    text-align: center;
-    font-size: 1.6em;
-    background-color: $color-second;
-    color: $color-white;
-    font-weight: 500;
-    line-height: 56px;
-    margin: 0 6px;
-
-    @include media-query($on-palm) {
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      font-size: 1.3em;
-    }
-  }
-
-  .btn-arrow {
-    background: none;
-    @include media-query($on-palm) {
-      svg {
-        width: 40px;
-      }
-    }
-
-    &.btn-prev-next-not-active {
-    }
-
-    &.btn-prev-next-active {
-      &:hover {
-        svg {
-          polygon {
-            fill: $color-first;
-          }
-        }
-      }
-    }
-  }
-
-  .btn-page {
-    &.btn-page-active {
-      cursor: default;
-      background-color: $color-first;
-    }
-    &.btn-page-not-active {
-      &:hover {
-        @include transform(translateY(-10px));
-        @include transition(all .3s);
-      }
-    }
-  }
-}
-
-.grid li {
-	// opacity: 0;
-}
-
-.grid li.shown,
-.no-js .grid li,
-.no-cssanimations .grid li {
-	// opacity: 1;
-}
-
-/* Effect 2: Move Up */
-.grid.effect-2 li.animate {
-	-webkit-transform: translateY(200px);
-	transform: translateY(200px);
-	-webkit-animation: moveUp 0.65s ease forwards;
-	animation: moveUp 0.65s ease forwards;
-}
-
-@-webkit-keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); opacity: 1; }
-}
-
-@keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); transform: translateY(0); opacity: 1; }
 }
