--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="{{site.title}}">
-  <meta property="og:image" content="http://cnaa97.github.io/public/img/graph.png">
-
   <title>
     {% if page.title %}
     {{ page.title | escape }} : {{ site.title | escape }}
@@ -14,6 +11,13 @@
     {% endif %}
   </title>
 
+  {% if page.title %}
+  <meta property="og:title" content="{{ page.title | escape }} : {{ site.title | escape }}">
+  {% else %}
+  <meta property="og:title" content="{{ site.title | escape }}">
+  {% endif %}
+
+  <meta property="og:image" content="http://cnaa97.github.io/public/img/graph.png">
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ '/public/style/main.css' | prepend: site.baseurl }}">
