--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
   <title>
     {% if page.title %}
-    {{ page.title | escape }} : {{ site.title | escape }}
+    {{ page.title | escape }} - {{ site.title | escape }}
     {% else %}
     {{ site.title | escape }} {{ site.subtitle | escape }}
     {% endif %}
