--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   </title>
 
   {% if page.title %}
-    <meta property="og:title" content="{{ page.title | escape }} : {{ site.title | escape }}">
+    <meta property="og:title" content="{{ page.title | escape }} - {{ site.title | escape }}">
   {% else %}
     <meta property="og:title" content="{{ site.title | escape }}">
   {% endif %}
