--- a/_layouts/posts-by-category.html
+++ b/_layouts/posts-by-category.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="posts-by-category">
+<div class="posts-by-category page-wrapper">
 {% include container-posts-by-category.html lang="ko" category=page.category %}
 </div>
 
