--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -171,6 +171,9 @@ pre {
     &.wrapper-content {
       padding-right: 16px;
       padding-left: 16px;
+      > .post {
+        margin-top: 30px;
+      }
     }
   }
 }
