--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,7 +83,11 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
-  padding-top: 18px;
+  padding-top: 24px;
+
+  @include media-query($on-palm) {
+    padding-top: 18px;
+  }
 }
 
 /**
