--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -90,7 +90,7 @@
       }
     }
 
-    @include media-query($on-palm) {
+    @include media-query($on-laptop) {
       width: 100%;
       height: 300px;
       ul {
@@ -225,6 +225,12 @@
 
   ul > li { list-style: circle; }
   ol > li { list-style: decimal; }
+
+  h2, h3, h4 {
+    code {
+      font-size: inherit;
+    }
+  }
 
   h2 {
     font-size: 32px;
