--- a/_includes/component-footer.html
+++ b/_includes/component-footer.html
@@ -5,7 +5,7 @@
         <ul>
           <li><a href="/">{{site.data['ko'].footer.home}}</a></li>
           <li><a href="/about">{{site.data['ko'].footer.about}}</a></li>
-          <li><a href="/cv">{{site.data['ko'].footer.cv}}</a></li>
+          <!-- <li><a href="/cv">{{site.data['ko'].footer.cv}}</a></li> -->
           <li><a href="mailto:{{ site.email }}">{{site.data['ko'].footer.mailme}}</a></li>
         </ul>
         <p class="rss-subscribe">{{site.data['ko'].footer.subscribe}}<a href="{{ "/feed.xml" | prepend: site.baseurl }}">{{site.data['ko'].footer.rss}}</a></p>
