--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -61,7 +61,7 @@
         }
         .social {
             margin-left: 0;
-            margin-top: 10px; 
+            margin-top: 10px;
             li {
                 list-style: none;
                 line-height: 2em;
@@ -115,7 +115,7 @@
     }
 
     .slogan-wrap {
-        margin-top: 110px; 
+        margin-top: 110px;
         text-align: center;
 
         .slogan {
@@ -237,7 +237,7 @@
 
     .section-content {
         > h3.title {
-            
+
             &.first {
                 margin-top: 0;
             }
@@ -357,4 +357,8 @@
     &.bottom {
         margin: 0 auto;
     }
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
 }
