--- a/layouts/_internal/disqus.html
+++ b/layouts/_internal/disqus.html
@@ -12,7 +12,7 @@
  (function () { // DON'T EDIT BELOW THIS LINE
     var shortName = "{{ .Site.Params.disqusShortname }}"
     var d = document, s = d.createElement('script');
-    s.src = 'https://'+ shortName + 'disqus.com/embed.js';
+    s.src = 'https://'+ shortName + '.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
   })();
