--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,19 +7,78 @@
   padding-right: 1.3rem;
 }
 
+.main-wrapper > div > div > main > article > header > h1 {
+  font-size: 2.4rem;
+}
+
 .main-wrapper > div > div > main > article > header > h2 {
   font-size: 2rem;
 }
 
 .markdown {
   font-size: 110%;
+  margin-top: 1.4rem;
 }
 
 .markdown h1:first-child {
-  font-size: 2.4rem;
+  --ifm-h1-font-size: 1.5rem;
+  font-size: var(--ifm-h1-font-size);
+}
+
+.docusaurus-mt-lg {
+  margin-top: 2rem;
+}
+
+
+/* .markdown > h2 {
+  --ifm-h2-font-size: 1.25rem;
+  --ifm-h3-font-size: 1rem;
+  --ifm-h4-font-size: 0.875rem;
+  --ifm-h5-font-size: 0.85rem;
+  --ifm-h6-font-size: 0.7rem;
+
+  --ifm-h2-font-size: 2rem;
+
+  margin-bottom: calc(
+    var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading)
+  );
+  margin-top: calc(var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
+} */
+
+/* --ifm-h3-font-size: 1rem;
+--ifm-h4-font-size: 0.875rem;
+--ifm-h5-font-size: 0.85rem;
+--ifm-h6-font-size: 0.7rem; */
+.markdown > h2 {
+  --ifm-h2-font-size: 1.5rem;
+  --ifm-leading: 1rem;
+  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading));
+  margin-top: calc(var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
+}
+
+.markdown > h3 {
+  --ifm-h3-font-size: 1.25rem;
+  --ifm-leading: 0.8rem;
+  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var());
+  margin-top: calc(var(--ifm-h3-vertical-rhythm-top) * var(--ifm-leading));
+}
+
+.markdown > h1,
+.markdown > h2,
+.markdown > h3,
+.markdown > h4,
+.markdown > h5 {
+  position: relative;
+}
+
+.hash-link {
+  position: absolute;
+  /* @apply static; */
 }
 
 :root {
+  --ifm-leading: 0.6rem;
+  --ifm-heading-vertical-rhythm-bottom: 0.5;
   --ifm-color-primary: #ef2ebc;
   --ifm-color-primary-dark: #ed14b4;
   --ifm-color-primary-darker: #e111aa;
@@ -27,12 +86,6 @@
   --ifm-color-primary-light: #f148c4;
   --ifm-color-primary-lighter: #f256c9;
   --ifm-color-primary-lightest: #f57dd5;
-  --ifm-h1-font-size: 1.5rem;
-  --ifm-h2-font-size: 1.25rem;
-  --ifm-h3-font-size: 1rem;
-  --ifm-h4-font-size: 0.875rem;
-  --ifm-h5-font-size: 0.85rem;
-  --ifm-h6-font-size: 0.7rem;
 }
 
 .footer.footer--dark: {
